--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,8 @@ email: wenliangmatt@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Google search results) and in your feed.xml site description. signature-- Wen-Liang, Huang
 baseurl: '/MattBlog' # the subpath of your site, e.g. /blog
-#baseurl: '/MattBlog'
 url: 'https://wenlianghuang.github.io' # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username: MattBlog
@@ -39,6 +38,7 @@ collections:
     tag:
         output: true
 
+github_username: wenlianghuang
 
 
 # Exclude from processing.
