20190716 modified and new file commit

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ baseurl: '/MattBlog' # the subpath of your site, e.g. /blog
 url: 'https://wenlianghuang.github.io' # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username: MattBlog
-
+disquis_shortname: jaycetyle
 # Build settings
 markdown: kramdown
 theme: minima
